--- a/2.html
+++ b/2.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <title>WEB1-CSS</title>
   <meta charset="utf-8">
@@ -12,20 +13,33 @@
 
   gtag('config', 'UA-146582755-1');
 </script>
-
+<link rel="stylesheet" href="style.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="colors.js"></script>
 </head>
+
 <body>
+
   <h1><a href="index.html">WEB</a></h1>
+<div id="grid">
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
+    <li><a href="1.html" >HTML</a></li>
+    <li><a href="2.html" >CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
 
+  <div id="article">
+    <input type="button" value="night" onclick="
+      nightDayHandler(this);
+    ">
+    <h2> CSS</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ok0bBJPtgJI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>
+      Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts. This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and repetition in the structural content.</p>
 
-  <h2> CSS</h2>
-  <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts. This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and repetition in the structural content.</p>
-  <p>
+    <p>
+  </div>
+</div>
     <div id="disqus_thread"></div>
 <script>
 
@@ -49,4 +63,5 @@ s.setAttribute('data-timestamp', +new Date());
 
   </p>
 </body>
+
 </ html>
