--- a/index.html
+++ b/index.html
@@ -12,20 +12,28 @@
 
   gtag('config', 'UA-146582755-1');
 </script>
-
+<link rel="stylesheet" href="style.css">
+<script src="colors.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">HTML</a></li>
+      <li><a href="2.html">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
+    </ol>
 
-
-  <h2>WEB</h2>
-  <p>The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://www.example.com/), which may be interlinked by hypertext, and are accessible over the Internet.[1] The resources of the WWW may be accessed by users by a software application called a web browser.</p>
-  <p>
+    <div id="article">
+      <input type="button" value="night" onclick="
+        nightDayHandler(this);
+      ">
+      <h2>WEB</h2>
+      <p>The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://www.example.com/), which may be interlinked by hypertext, and are accessible over the Internet.[1] The resources of the WWW may be accessed by users by a software application called a web browser.</p>
+      <p>
+    </div>
+</div>
     <div id="disqus_thread"></div>
   <script>
 
